--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,9 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "axios": "^1.7.9",
-    "ryuu-fca-api": "^3.1.3"
+    "ryuu-fca-api": "^3.1.3",
+    "express": "^4.18.2",
+    "chalk": "^4.1.2",
+    "figlet": "^1.5.2"
   }
 }
