--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "ryuu-fca-api": "^3.1.3",
     "express": "^4.18.2",
     "chalk": "^4.1.2",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "fs-extra": "^11.1.1",
+    "yt-search": "^2.10.2",
+    "@distube/ytdl-core": "^4.10.0"
   }
 }
